<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Name for the application [CHAR LIMIT=12] -->

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->

    <!-- Label for editor menu option to save products and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>



    <!-- Label for dropdown menu option if the product quality is new [CHAR LIMIT=20] -->

    <string name="product_name">Product Name</string>
    <string name="hint_product_name">Product</string>

    <string name="product_price">Price</string>
    <string name="hint_product_price">Price</string>

    <string name="quantity">Quantity</string>
    <string name="hint_product_quantity">Quantity</string>


    <string name="product_quality" tools:keep="@string/product_quality">Quality</string>

    <string name="supplier_name">Supplier Name</string>
    <string name="hint_product_supplier_name">Supplier</string>

    <string name="supplier_contact">Supplier Phone Number</string>
    <string name="hint_supplier_phone_number">Supplier Contact</string>

    <string name="quality_refurbished">Refurbished</string>
    <string name="quality_new">New</string>
    <string name="quality_used">Used</string>

    <string name="add_product">Add Product</string>
    <string name="editor_insert_product_failed">product insert failed</string>
    <string name="editor_insert_product_successful">product insert successful</string>
    <string name="click_to_start_adding" tools:keep="@string/click_to_start_adding">Click to Start Adding</string>

    <string name="empty_image_view">Empty Image View</string>

    <string name="you_know_you_want_to_click_that_fab">You know you want to click that Fab</string>
    <string name="edit_product">Edit Product</string>
    <string name="deleted_all_products_message">All products deleted</string>
    <string name="product_name_required">Product name required</string>
    <string name="product_price_required">Product price required</string>
    <string name="product_quantity_required">Product quantity required</string>
    <string name="supplier_phone_required">Supplier\'s phone number required</string>
    <string name="supplier_name_required" tools:keep="@string/supplier_name_required">Supplier\'s name required</string>
    <string name="quality_check_required">For the quality, select anything except unknown</string>
    <string name="quality_unknown">Unknown</string>
    <string name="editor_product_update_failed">Error updating product</string>
    <string name="editor_product_update_successful">Product updated successfully</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_product_failed">Error deleting product</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="cancel">Cancel</string>
    <string name="price_unknown" tools:keep="@string/price_unknown">Price unknown</string>
    <string name="quantity_unknown" tools:keep="@string/quantity_unknown">Unknown quantity</string>
    <string name="sold">Sold</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="contact_supplier" tools:keep="@string/contact_supplier">Contact Supplier</string>
    <string name="delete_product" tools:keep="@string/delete_product">Delete Product</string>
    <string name="lower_quantity" tools:keep="@string/lower_quantity">lower quantity</string>
    <string name="increase_quantity" tools:keep="@string/increase_quantity">increase quantity</string>
    <string name="quality">Quality</string>

    <string name="product_view">Product view Details</string>
    <string name="product_price_currency">USD</string>
    <string name="product_quantity">Quantity</string>
    <string name="quantity_change_msg">Quantity changed</string>
    <string name="quantity_finish_msg">Final Quantity</string>
    <string name="product_supplier_phone_number">Supplier\'s Phone Number</string>
    <string name="delete">Delete</string>
    <string name="amount">amount</string>
    <string name="name_of_supplier">name of supplier</string>
    <string name="supplier_number">supplier\'s number</string>
    <string name="name_of_the_product">product name</string>
    <string name="price_of_the_product">price of the product</string>

</resources>
