<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for the editor -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".EditorActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inventory_management"
            android:layout_marginBottom="16dp"/>

    <!-- Name field -->
    <EditText
            android:id="@+id/edit_product_name"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle"/>

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quality"/>

        <Spinner
                android:id="@+id/spinner_quality"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
    </LinearLayout>


    <!-- Price field -->
    <EditText
            android:id="@+id/edit_product_price"
            android:hint="@string/hint_product_price"
            android:inputType="numberDecimal"
            style="@style/EditorFieldStyle"/>

    <!-- Quantity editing -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!-- Quantity field -->
        <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_weight="2"/>

        <Button
                android:id="@+id/decrease_quantity"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:text="@string/lower_quantity"/>

        <Button
                android:id="@+id/add_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increase_quantity"/>

    </LinearLayout>

    <!-- Supplier name field -->
    <EditText
            android:id="@+id/edit_product_supplier_name"
            android:hint="@string/hint_product_supplier_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle"/>

    <!-- Supplier phone number field -->
    <EditText
            android:id="@+id/edit_product_supplier_phone_number"
            android:hint="@string/hint_supplier_phone_number"
            android:inputType="phone"
            style="@style/EditorFieldStyle"/>

    <!-- Buttons -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

        <Button
                android:id="@+id/contact_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_supplier"/>

        <Button
                android:id="@+id/delete_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_product"/>

    </LinearLayout>

</LinearLayout>

