<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of products -->
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:baselineAligned="false">

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


            <TextView
                    android:id="@+id/product_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#2B3D4D"
                    tools:text="@string/product_name"/>
        </LinearLayout>

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/product_quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#AEB6BD"
                    tools:text="@string/product_quantity"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:baselineAligned="false">

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" android:baselineAligned="false" tools:ignore="UselessParent">

            <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" tools:ignore="NestedWeights">
                <TextView
                        android:id="@+id/product_price_view_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="#AEB6BD"
                        tools:text="@string/product_price"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" android:baselineAligned="false">
                    <LinearLayout
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">
                        <Button
                                android:id="@+id/item_sold_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sold"
                                android:textAllCaps="true"
                                android:focusable="false"
                                android:drawableLeft="@drawable/ic_shopping_cart_black_24dp"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_height="match_parent"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                        <Button
                                android:id="@+id/edit_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/edit_product"
                                android:textAllCaps="true"
                                android:focusable="false"
                                android:drawableLeft="@drawable/ic_edit_black_24dp"/>


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>