<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              tools:context=".ViewActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/product_view"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:baselineAligned="false">

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                    android:text="@string/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="13sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/product_name_view_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="16dp"
                    android:textSize="15sp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:baselineAligned="false">

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


            <TextView
                    android:text="@string/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="13sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/product_price_view_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="16dp"
                    android:textSize="15sp"/>

            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="@string/product_price_currency"
                    android:paddingEnd="16dp" android:layout_marginStart="16dp" tools:ignore="RtlSymmetry"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:baselineAligned="false">

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


            <TextView
                    android:text="@string/product_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/product_quantity_view_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="16dp"
                    android:textSize="15sp"/>

            <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp" android:baselineAligned="false" tools:ignore="NestedWeights,RtlSymmetry"
                    android:paddingStart="16dp">

                <LinearLayout
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    <Button
                            android:id="@+id/increase_button"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@color/colorAccent"
                            android:text="+"
                            android:textColor="#fff"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    <Button
                            android:id="@+id/decrease_button"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@color/colorAccent"
                            android:text="-"
                            android:textColor="#fff"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:baselineAligned="false">

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


            <TextView
                    android:text="@string/hint_product_supplier_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/product_supplier_name_view_text"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp" android:paddingEnd="16dp" tools:ignore="RtlSymmetry"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" android:baselineAligned="false">

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


            <TextView
                    android:text="@string/product_supplier_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" android:baselineAligned="false" tools:ignore="UselessParent">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/supplier_phone_number_view_text"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:padding="16dp"
                            android:textSize="15sp"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                    <Button
                            android:id="@+id/phone_button"
                            android:layout_width="27dp"
                            android:layout_height="match_parent"
                            android:background="@color/colorAccent"
                            android:drawableLeft="@drawable/ic_phone_black_24dp"
                            android:focusable="false" android:drawableStart="@drawable/ic_phone_black_24dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:focusable="false"
                android:drawableLeft="@drawable/ic_delete_black_24dp"
                android:text="@string/delete" android:drawableStart="@drawable/ic_delete_black_24dp"/>
    </LinearLayout>
</LinearLayout>